--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
 					<div class="row gtr-50 gtr-uniform">
 						<div class="col-4"><span class="image fit"><img src="images/work/ait/1.JPG" alt="" ></span></div>
 						<div class="col-4"><span class="image fit"><img src="images/work/ait/2.JPG" alt="" ></span></div>
-						<div class="col-4"><span class="image fit"><img src="images/work/ait/3.jpg" alt="" ></span></div>
+						<div class="col-4"><span class="image fit"><img src="images/work/ait/3.JPG" alt="" ></span></div>
 					</div>
 
 				</p>
