--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 			<h3><li>Erasmus Mundus International Scholarship</li></h3>
 				<p style="text-align:justify">	An Erasmus Mundus Joint Master Degree (EMJMD), is a prestigious, integrated, international study program, 
 					jointly delivered by an international consortium of higher education institutions. EMJMDs 
-					award EU-funded scholarships to the best student candidates applying under annual selection rounds.	I 																					
+					award EU-funded scholarships to the best student candidates applying under annual selection rounds. 																					
 				</p>
 				
 
