--- a/my self.html
+++ b/my self.html
@@ -42,48 +42,49 @@
 		</header>
 
 	<div class="main">
-		<p style="text-align:justify"><span class="image right"><img src="images/myself/family.jpg" alt="" /></span>My Name is Prasadi Thilanka Senadeera
-			 I am currently a master student in New University of Lisbon in Portugal. I was born in 1991 to a 
+		<p style="text-align:justify"><span class="image right"><img src="images/myself/family.jpg" alt="" /></span>
+			 My Name is Prasadi Thilanka Senadeera
+			 and I am currently a master candidate in New University of Lisbon in Portugal. I was born in 1991 to a 
 			 middle-class family in Sri Lanka. My father was a planter, and my mother is a teacher. We are five 
-			 sisters and brothers, and I am the second of them. <br>
+			 sisters and brothers, and I am the second of them. <br><br>
 
-			 In 1996, I started studying as a child at the school in my village. After spending five years there, 
-			 I had a chance to enter the best school of the country from grade five scholarship examination that 
-			 changes my whole life as I am today. After admitting to the new school, always I was an outstanding 
+			 In 1996 ,i started my education journey at the school in my village. After running through five years there, 
+			 I got an opportunity to enroll the best school of the country from grade five scholarship examination that 
+			 changed my whole life as I am today. After taking in a part of the new school, always I was an outstanding 
 			 student during my secondary school and high school. At the end of the secondary school, I was 
-			 competence to enter the fore 100 uppermost students of the country with distinction passes for all 
-			 subjects in the final examination. Then in the high school, I decided to take up Mathematics stream 
+			 competence to enter the top 100 uppermost students of the country with distinction passes for all the  
+			 subjects in the final examination. In the high school, I decided to take up mathematics stream 
 			 in my university entrance examination. Finally, out of around 300,000 students I was lucky enough to 
-			 be included in the 10% who gets university entrance opportunity.<br>
+			 be included in the 5% who gets university entrance opportunity.<br>
 
-			 In 2013, I was entered to the Faculty of Geomatics in Sabaragamuwa University of Sri Lanka as one of 
+			 In 2013, I entered to the Faculty of Geomatics in Sabaragamuwa University of Sri Lanka as one of 
 			 the 84 student who got selected for the surveying science degree program which is the world-class leading 
 			 bachelors’ degree relevant to Geomatics in the region of South Asia. During the first five semesters of 
-			 the degree program we had to follow the core courses where I have wholeheartedly enjoyed all the subjects. 
-			 My original ambition in life was to become a Professional Surveyor. However, it is perhaps unsurprising 
+			 the degree program, we had to follow the core courses where I have wholeheartedly enjoyed all the subjects. 
+			 The ultimate ambition of my life was to become a Professional Surveyor. However, it is perhaps unsurprising 
 			 that a special interest was grown in me for the field of remote sensing which changed my career aspirations 
 			 in this direction. So, by the fifth semester, I decided to change my academic path to specialize in the 
 			 field of remote sensing and photogrammetry. Further during the final semester of my undergraduate, I was 
 			 selected to complete an internship at Geoinformatics center, Asian institute of technology, Thailand as 
-			 one of the two students of the Department of Remote Sensing and GIS who got this great chance. There I 
-			 had the rare opportunity to blend my knowledge and experience with the international experts of the field 
-			 and absorb their knowledge. Finally, at the end of my four years of undergraduate life,  I could complete 
-			 my bachelors with a First class honors and furthermore there I was able to award with a gold medal for 
+			 one of the two students of the Department of Remote Sensing and GIS who got this great fortune. I 
+			 had a rare opportunity to blend my knowledge and experience with the international experts of the field 
+			 and absorb their knowledge dring my tme at GIC. Finally, at the end of my four years of undergraduate life,  I could complete 
+			 my bachelors with a First class honors icluding a gold medal for 
 			 the best performance and the highest final grade point average (GPA-3.82 out of 4) of my graduating class.
 			  Moreover, I was brainy to have distinction passes for all subjects that I had followed in my specialization 
 			  course.</p>
 			<p style="text-align:justify"><span class="image left"><img src="images/myself/me.JPG" alt=""  /></span>
-				Because of my academic excellence and the ability to multi-task, I was recruited as a teaching assistant 
-				in the Department of Remote Sensing and GIS shortly after two months of my graduation. My duties 
-				included to instructing the first year and second year undergraduate students for their land surveying 
-				field practices and to deliver practical classes on optical and microwave remote sensing specialization 
-				students. After a year in 2018, I was promoted to an assistant lecturer in the same department where I 
-				worked. Then as an assistant lecturer, other than conducting practical classes I was also assigned for 
-				conducting lectures for remote sensing specialization students and, I successfully designed and graded 
-				the practical exams of the end semester examinations.   In the meantime, I worked as a visiting instructor
-				 for undergraduate students at the faculty of management studies as well as for graduate master students 
-				 at the Faculty of Graduate studies at Sabaragamuwa University of Sri Lanka. Then, in addition to the duties 
-				 of the university, I also worked as a resource person for various training programs on GNSS, Google Earth, 
+				Because of my academic excellence and the ability to multi-task, I was absorbed to the Department of Remote Sensing and GIS
+				as a teaching assistant shortly after two months of my graduation. During my tenure, my duties were instructing first year and 
+				second year undergraduate students for their land surveying field practices and to deliver practical classes on optical and microwave 
+				remote sensing for the students who got selected for the specialization courses. 
+				After one year, I was promoted to the grade of assistant lecturer in 2018. Then as an assistant lecturer, further to 
+				conducting practical classes I was also assigned to conduct lectures for remote sensing specialization students, designed and evaluate the 
+				practical exams of the semester examinations. 
+				
+				In the meantime, I worked as a visiting instructor for undergraduate students at the faculty of management studies as 
+				well as for graduate master students at the Faculty of Graduate studies at Sabaragamuwa University of Sri Lanka. 
+				Then, in addition to the duties of the university, I also worked as a resource person for various training programs on GNSS, Google Earth, 
 				 QGIS and ArcGIS for land survey professionals and Sri Lanka's revenue department staff. Moreover, I contributed 
 				 as an instructor to the students’ real world survey projects such as design a suitable channel 
 				 system for the Sri Lanka Irrigation Department by engineering students at Ruhuna University, Design a 
