--- a/my self.html
+++ b/my self.html
@@ -73,6 +73,7 @@
 			 the best performance and the highest final grade point average (GPA-3.82 out of 4) of my graduating class.
 			  Moreover, I was brainy to have distinction passes for all subjects that I had followed in my specialization 
 			  course.</p>
+		
 			<p style="text-align:justify"><span class="image left"><img src="images/myself/me.JPG" alt=""  /></span>
 				Because of my academic excellence and the ability to multi-task, I was absorbed to the Department of Remote Sensing and GIS
 				as a teaching assistant shortly after two months of my graduation. During my tenure, my duties were instructing first year and 
@@ -82,34 +83,34 @@
 				conducting practical classes I was also assigned to conduct lectures for remote sensing specialization students, designed and evaluate the 
 				practical exams of the semester examinations. 
 				
-				In the meantime, I worked as a visiting instructor for undergraduate students at the faculty of management studies as 
-				well as for graduate master students at the Faculty of Graduate studies at Sabaragamuwa University of Sri Lanka. 
-				Then, in addition to the duties of the university, I also worked as a resource person for various training programs on GNSS, Google Earth, 
+				In the meantime, I worked as a visiting instructor for undergraduate students of the faculty of management studies as 
+				well as for master candidates of the Faculty of Graduate studies in Sabaragamuwa University of Sri Lanka. 
+				In addition to the duties in the university, I also involved as a resource person for various training programs on GNSS, Google Earth, 
 				 QGIS and ArcGIS for land survey professionals and Sri Lanka's revenue department staff. Moreover, I contributed 
-				 as an instructor to the students’ real world survey projects such as design a suitable channel 
-				 system for the Sri Lanka Irrigation Department by engineering students at Ruhuna University, Design a 
-				 suitable race track for the Kothmale International Training Institute by students from University of 
+				 as an instructor to the students’ real world survey projects such as "Design a suitable channel 
+				 system for the Sri Lankan Irrigation Department" by engineering students at Ruhuna University and "Design a 
+				 suitable race track for the Kothmale International Training Institute" by students from University of 
 				 Vocational technologies in Rathmalana, Sri Lanka.</p>
 
 
-				<p style="text-align:justify">However, despite being mostly academic, I have also committed my free time
+				<p style="text-align:justify"> Despite being mostly academic, I have also committed my free time
 					 to take part in several scholastic competitions and various extracurricular activities that helped 
 					 me grow as a person. I was awarded twice in the year 2004 and 2005 as champions of the all-island 
 					 inter-schools’ hockey tournament and won the certificate of merit in the school’s sports ceremony.
 					  As an undergraduate, I have participated in extracurricular activities of the university including 
-					  sports and fine arts. There, I was able to obtain several awards in the Inter Faculty Spots Meet as
-					   2nd runners-up for Badminton in 2015 and 1st runners-up for badminton, 1st runners-up for Netball 
-					   in 2014. Also, I have actively participated to different occasions at the university as an 
-					   announcer. Then in 2019 while I am entitling as an assistant lecturer, I wanted to enhance my 
-					   academic knowledge as well. So, I started applying for an international master's program, in 2019 
+					  sports and fine arts. There, I was able to obtain several awards in the inter faculty spots meet as
+					   2nd runners-up for badminton in 2015 and 1st runners-up for badminton, 1st runners-up for netball 
+					   in 2014. Also, I have actively participated in several functions at the university as an 
+					   announcer. Then in 2019 while I was entitling as an assistant lecturer, I wanted to enhance my 
+					   academic knowledge as well. So, I started applying for an international master's program. In 2019 
 					   I was awarded as a full scholar to receive the Master of Science in Geospatial technologies in 
 					   Europe which is offered together with the University of Münster, in Germany, New University of 
-					   Lisbon and the University Jaume I, in Spain. I am currently studying in the last semester of the 
+					   Lisbon in Portugal and the University Jaume I, in Spain. I am currently studying in the last semester of the 
 					   program and working on my dissertation project to develop an automatic road extraction method to
 						extract roads form high resolution satellite images using convolution neural network based image 
 						segmentation architectures and  morphological operations. Given my history of commitment to 
 						excellence, I am confident that I will bring a high level of energy and enthusiasm to any offer
-						 I receive in the future. </p>
+						 I will receive in the future. </p>
 
 						 <div class="box alt">
 							<div class="row gtr-50 gtr-uniform">
