--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<a href="index.html" class="logo"><strong>Portfolio </strong> Prasadi Senadeera</a>
+		<a href="index.html" class="logo"><strong> Prasadi Senadeera</strong></a>
 		<ul class="icons">
 			<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 			<li><a href="https://www.facebook.com/prasadi.senadeera" class="icon brands fa-facebook-f"><span class="label">
