--- a/my self.html
+++ b/my self.html
@@ -110,7 +110,7 @@
 						extract roads form high resolution satellite images using convolution neural network based image 
 						segmentation architectures and  morphological operations. Given my history of commitment to 
 						excellence, I am confident that I will bring a high level of energy and enthusiasm to any offer
-						 I will receive in the future. </p>
+						that I will receive in the future. </p>
 
 						 <div class="box alt">
 							<div class="row gtr-50 gtr-uniform">
