--- a/my self.html
+++ b/my self.html
@@ -48,7 +48,7 @@
 			 middle-class family in Sri Lanka. My father was a planter, and my mother is a teacher. We are five 
 			 sisters and brothers, and I am the second of them. <br><br>
 
-			 In 1996 ,i started my education journey at the school in my village. After running through five years there, 
+			 In 1996, I started my education journey at the school in my village. After running through five years there, 
 			 I got an opportunity to enroll the best school of the country from grade five scholarship examination that 
 			 changed my whole life as I am today. After taking in a part of the new school, always I was an outstanding 
 			 student during my secondary school and high school. At the end of the secondary school, I was 
