--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 			</p>
 			
 			<h3><li>Sri Lanka's Grade 5 Scholorship </li></h3>
-			<p style="text-align:justify">Garde five scholarships is  aims to admitting talented students to more prestigious schools 
+			<p style="text-align:justify">Grade five scholarships is  aims to admitting talented students to more prestigious schools 
 				and providing bursaries to bright but economically disadvantaged students. In 2002, grade five Scholarship examination, I was selected as one of the best students in the country and had the
 				 opportunity to enroll in the number one girls' school in the country.			
 				 
