--- a/my self.html
+++ b/my self.html
@@ -68,8 +68,8 @@
 			 selected to complete an internship at Geoinformatics center, Asian institute of technology, Thailand as 
 			 one of the two students of the Department of Remote Sensing and GIS who got this great fortune. I 
 			 had a rare opportunity to blend my knowledge and experience with the international experts of the field 
-			 and absorb their knowledge dring my tme at GIC. Finally, at the end of my four years of undergraduate life,  I could complete 
-			 my bachelors with a First class honors icluding a gold medal for 
+			 and absorb their knowledge during my time at GIC. Finally, at the end of my four years of undergraduate life,  I could complete 
+			 my bachelors with a First class honors including a gold medal for 
 			 the best performance and the highest final grade point average (GPA-3.82 out of 4) of my graduating class.
 			  Moreover, I was brainy to have distinction passes for all subjects that I had followed in my specialization 
 			  course.</p>
@@ -87,9 +87,9 @@
 				well as for master candidates of the Faculty of Graduate studies in Sabaragamuwa University of Sri Lanka. 
 				In addition to the duties in the university, I also involved as a resource person for various training programs on GNSS, Google Earth, 
 				 QGIS and ArcGIS for land survey professionals and Sri Lanka's revenue department staff. Moreover, I contributed 
-				 as an instructor to the students’ real world survey projects such as "Design a suitable channel 
+				 as an instructor to the students’ real-world survey projects such as "Design a suitable channel 
 				 system for the Sri Lankan Irrigation Department" by engineering students at Ruhuna University and "Design a 
-				 suitable race track for the Kothmale International Training Institute" by students from University of 
+				 suitable racetrack for the Kothmale International Training Institute" by students from University of 
 				 Vocational technologies in Rathmalana, Sri Lanka.</p>
 
 
@@ -104,7 +104,7 @@
 					   announcer. Then in 2019 while I was entitling as an assistant lecturer, I wanted to enhance my 
 					   academic knowledge as well. So, I started applying for an international master's program. In 2019 
 					   I was awarded as a full scholar to receive the Master of Science in Geospatial technologies in 
-					   Europe which is offered together with the University of Münster, in Germany, New University of 
+					   Europe, which is offered together with the University of Münster, in Germany, New University of 
 					   Lisbon in Portugal and the University Jaume I, in Spain. I am currently studying in the last semester of the 
 					   program and working on my dissertation project to develop an automatic road extraction method to
 						extract roads form high resolution satellite images using convolution neural network based image 
