--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<article>
 			<div class="content">
 				<h3>Bachelors of Surveying Science (Specialization: Photogrammetry and Remote sensing)</h3>
-				<p style="text-align:justify"> Awarded by the Faculty of Geomatics, Sabaragamuwa university of Sri lanka, Balangoda (Sri Lanka) <br><br>
+				<p style="text-align:justify"> Awarded by the Faculty of Geomatics, Sabaragamuwa university of Sri Lanka, Balangoda (Sri Lanka) <br><br>
 				<b>Main Subjects:</b> Remote Sensing, Geographic Information Systems, Geodesy, Photogrammetry, Land Surveying, 
 				Hydrographic Surveying, Cartography, Computer Programming.
 				</p>
@@ -169,7 +169,7 @@
 					Tokyo University of Marine Science and Technology.																					
 			</p>
 			
-			<h3><li>Sri Lanka's Grade 5 Scholorship </li></h3>
+			<h3><li>Sri Lanka's Grade 5 Scholarship </li></h3>
 			<p style="text-align:justify">Grade five scholarships is  aims to admitting talented students to more prestigious schools 
 				and providing bursaries to bright but economically disadvantaged students. In 2002, grade five Scholarship examination, I was selected as one of the best students in the country and had the
 				 opportunity to enroll in the number one girls' school in the country.			
@@ -205,7 +205,7 @@
 										<span class="opener">Research</span>
 										<ul>
 										<li><a href="remote.html">Remote Sensing</a></li>
-										<li><a href="gis.html">Goegraphical information Systems (GIS) </a></li>
+										<li><a href="gis.html">Geographical information Systems (GIS) </a></li>
 										</ul></li>
 								
 									<li><a href="work.html">Work Experiences</a></li>
