--- a/my self.html
+++ b/my self.html
@@ -43,7 +43,7 @@
 
 	<div class="main">
 		<p style="text-align:justify"><span class="image right"><img src="images/myself/family.jpg" alt="" /></span>
-			 My Name is Prasadi Thilanka Senadeera
+			 My name is Prasadi Thilanka Senadeera
 			 and I am currently a master candidate in New University of Lisbon in Portugal. I was born in 1991 to a 
 			 middle-class family in Sri Lanka. My father was a planter, and my mother is a teacher. We are five 
 			 sisters and brothers, and I am the second of them. <br><br>
