--- a/remote.html
+++ b/remote.html
@@ -47,7 +47,7 @@
 				<a href="#" class="image"><img src="images/remote/sar/Slide8.PNG" alt="" /></a>
 				<h3>Estimating the forest canopy loss using sentinel-1 C band SAR images</h3>		
 				<p style="text-align:justify">In this research, the main objective was to detect 
-					deforested areas in Wilpattu from radar remote sensing techniques by applying different 
+					deforested areas in Wilpattu from RADAR remote sensing techniques by applying different 
 					change detection methods. Basically, complex coherence, correlation 
 					coefficient, image differencing and images rationing techniques were 
 					applied for two sentinel 1 SAR C band images before and after the event.  
@@ -55,7 +55,7 @@
 					within the boundaries of Wilpattu National Park, but significant loss of tree
 						covering is observed outside the boundaries of the park.</p>
 				<ul class="actions">
-					<li><a href="pdf/my.pdf" class="button">More</a></li>
+					<li><a href="pdf/ESTIMATING THE FOREST CANOPY LOSS USING SENTINEL1 C BAND SAR IMAGES.pdf" class="button">More</a></li>
 				</ul>
 			</article>
 			<article>
