--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</header>
 			<p>Feel free to explore the rest of my story as I hope you enjoy reading it as much as I have enjoyed creating it!</p>
 			<ul class="actions">
-				<li><a href="my self.html" class="button big">Read More</a></li>										
+				<li><a href="my_self.html" class="button big">Read More</a></li>										
 			</ul>
 		</div>
 		<span class="image object">
@@ -190,8 +190,8 @@
 </div>
 </div>
 
-					<!-- Sidebar -->
-					<div id="sidebar">
+									<!-- Sidebar -->
+				<div id="sidebar">
 					<div class="inner">
 
 						<!-- Menu -->
@@ -206,6 +206,7 @@
 										<ul>
 										<li><a href="remote.html">Remote Sensing</a></li>
 										<li><a href="gis.html">Geographical information Systems (GIS) </a></li>
+										<li><a href="thesis.html">Master Thesis </a></li>
 										</ul></li>
 								
 									<li><a href="work.html">Work Experiences</a></li>
