--- a/work.html
+++ b/work.html
@@ -38,12 +38,18 @@
 
 	<section>
 		<header class="main">
-		<h2>Working Experiences</h2>
+		<h1 style="text-align:center">WORKING EXPERIENCES</h1>
 		<br>
 		</header>
 
 		<div class="main">
-		<ol><h3><li>Research assistant,<a href="http://geoinfo.ait.ac.th/"> Geo informatics Centre</a>, Asian institute of Technology, Thailand</li></h3>
+		<ol><h3><li>Geospatial Analyst,<a href="www.staruplo.com"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal</li></h3>
+
+
+
+
+		
+		<h3><li>Research assistant,<a href="http://geoinfo.ait.ac.th/"> Geo informatics Centre</a>, Asian institute of Technology, Thailand</li></h3>
 		
 			<p>Each year the Geoinformatics Center invites university students with backgrounds in geospatial-related fields 
 			to participate in internships at AIT to engage with staff in various ongoing projects as well 
@@ -122,6 +128,7 @@
 										<ul>
 										<li><a href="remote.html">Remote Sensing</a></li>
 										<li><a href="gis.html">Geographical information Systems (GIS) </a></li>
+										<li><a href="thesis.html">Master Thesis </a></li>
 										</ul></li>
 								
 									<li><a href="work.html">Work Experiences</a></li>
@@ -139,7 +146,6 @@
 									</li>
 								</ul>
 							</nav>
-
 					<!-- Section -->
 								<section>
 									<header class="major">
