--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
             sciences, spatial cognition, geography, and spatial data sciences.
 
             <ul class="actions">
-                <li><a href=".html" class="button">More</a></li>
+                <li><a href="http://geomundus.org/2020/" class="button">More</a></li>
             </ul>
 
             
