--- a/work.html
+++ b/work.html
@@ -44,7 +44,15 @@
 
 		<div class="main">
 		<ol><h3><li>Geospatial Analyst,<a href="www.staruplo.com"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal</li></h3>
+			Staruplo, SANJOTEC – Parque de Ciência e Tecnologia, Portugal
+			Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and prototyping services in the fields of 
+			geospatial intelligence to promote the sustainability of our planet. I am currently working as a geospatial analyst at staruplo and focus on:
+			<ol>
+				<li>Designing and developing geospatial solutions for various projects focuses on global issues of public concern to improve life on earth. </li>
+				<li>supporting in the development of geospatial analysis for the geospatial intelligence platform developed by the company.</li>
+				<li>Experiencing with spatial analysis software including ArcGIS, ENVI, ErdasImagine and etc.</li>
 
+			</ol>
 
 
 
