--- a/work.html
+++ b/work.html
@@ -45,8 +45,8 @@
 		<div class="main">
 		<ol><h3><li>Geospatial Analyst,<a href="www.staruplo.com"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal</li></h3>
 			Staruplo, SANJOTEC – Parque de Ciência e Tecnologia, Portugal
-			Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and prototyping services in the fields of 
-			geospatial intelligence to promote the sustainability of our planet. I am currently working as a geospatial analyst at staruplo and focus on:
+			<p style="text-align:justify"> Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and prototyping services in the fields of 
+			geospatial intelligence to promote the sustainability of our planet. I am currently working as a geospatial analyst at staruplo and focus on: </p>
 			<ol>
 				<li>Designing and developing geospatial solutions for various projects focuses on global issues of public concern to improve life on earth. </li>
 				<li>supporting in the development of geospatial analysis for the geospatial intelligence platform developed by the company.</li>
@@ -54,12 +54,31 @@
 
 			</ol>
 
-
+		<h3><li>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka</a></li></h3>
+		<p style="text-align:justify"> After a year in 2018, I was promoted to an assistant lecturer in the same department where I worked.
+				Then as an assistant lecturer I was involved on,
+		<ol>
+			<li>Assigned for conducting supportive lectures and Practicals clsses on,
+				<ul><li>Satellite Technology</li>
+					<li>Space Technology</li>
+					<li>Fundamentals of GIS</li>
+					<li>Advanced Remote sensing</li>
+					<li>Fundamentals of Space Science</li>
+				</ul>
+			</li>
+			<li>Conducting Arc GIS practical for undergraduate students in department of Tourism Management, Faculty 
+				of Management studies, Sabaragamuwa University of Sri Lanka.</li>
+		</ol></p>
+		
+		<h3><li>Visiting Instructor, <a href="http://www.sab.ac.lk/fgs/"> Faculty of Graduate studies, Sabaragamuwa University 
+			of Sri Lanka</a></li></h3>
+			<p style="text-align:justify"> Appointed as a Visiting instructor for Masters of Surveying and Geodesy degree program to conduct practical 
+			classes on Photogrammetry and Remote Sensing. </p>
 
 		
 		<h3><li>Research assistant,<a href="http://geoinfo.ait.ac.th/"> Geo informatics Centre</a>, Asian institute of Technology, Thailand</li></h3>
 		
-			<p>Each year the Geoinformatics Center invites university students with backgrounds in geospatial-related fields 
+		<p style="text-align:justify"> Each year the Geoinformatics Center invites university students with backgrounds in geospatial-related fields 
 			to participate in internships at AIT to engage with staff in various ongoing projects as well 
 			as attend training programs conducted by the center which help to foster their background knowledge and offer 
 			experiences in new areas during the internship. <br><br>
@@ -89,25 +108,7 @@
 						subjects.</li>
 				</ol></p>
 			
-			<h3><li>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka</a></li></h3>
-			<p style="text-align:justify"> After a year in 2018, I was promoted to an assistant lecturer in the same department where I worked.
-				 Then as an assistant lecturer I was involved on,
-			<ol>
-				<li>Assigned for conducting supportive lectures and Practicals clsses on,
-					<ul><li>Satellite Technology</li>
-						<li>Space Technology</li>
-						<li>Fundamentals of GIS</li>
-						<li>Advanced Remote sensing</li>
-						<li>Fundamentals of Space Science</li>
-					</ul>
-				</li>
-				<li>Conducting Arc GIS practical for undergraduate students in department of Tourism Management, Faculty 
-					of Management studies, Sabaragamuwa University of Sri Lanka.</li>
-			</ol></p>
-			<h3><li>Visiting Instructor, <a href="http://www.sab.ac.lk/fgs/"> Faculty of Graduate studies, Sabaragamuwa University 
-				of Sri Lanka</a></li></h3>
-				<p style="text-align:justify"> Appointed as a Visiting instructor for Masters of Surveying and Geodesy degree program to conduct practical 
-				classes on Photogrammetry and Remote Sensing. </p>
+
 
 
 
