--- a/work.html
+++ b/work.html
@@ -43,10 +43,11 @@
 		</header>
 
 		<div class="main">
-		<ol><h3><li>Geospatial Analyst,<a href="www.staruplo.com"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal</li></h3>
-			Staruplo, SANJOTEC – Parque de Ciência e Tecnologia, Portugal
-			<p style="text-align:justify"> Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and prototyping services in the fields of 
-			geospatial intelligence to promote the sustainability of our planet. I am currently working as a geospatial analyst at staruplo and focus on: </p>
+		<ol><h3><li>Geospatial Analyst,<a href="www.staruplo.com"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal. [01.03.2021 - present]</li></h3>
+		
+		<p style="text-align:justify"> Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and 
+			prototyping services in the fields of geospatial intelligence to promote the sustainability of our planet. I am currently working as a 
+			geospatial analyst at staruplo and focus on: </p>
 			<ol>
 				<li>Designing and developing geospatial solutions for various projects focuses on global issues of public concern to improve life on earth. </li>
 				<li>supporting in the development of geospatial analysis for the geospatial intelligence platform developed by the company.</li>
@@ -54,22 +55,22 @@
 
 			</ol>
 
-		<h3><li>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka</a></li></h3>
-		<p style="text-align:justify"> After a year in 2018, I was promoted to an assistant lecturer in the same department where I worked.
-				Then as an assistant lecturer I was involved on,
-		<ol>
-			<li>Assigned for conducting supportive lectures and Practicals clsses on,
-				<ul><li>Satellite Technology</li>
-					<li>Space Technology</li>
-					<li>Fundamentals of GIS</li>
-					<li>Advanced Remote sensing</li>
-					<li>Fundamentals of Space Science</li>
-				</ul>
-			</li>
-			<li>Conducting Arc GIS practical for undergraduate students in department of Tourism Management, Faculty 
-				of Management studies, Sabaragamuwa University of Sri Lanka.</li>
-		</ol></p>
-		
+		<h3><li>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka. [04.12.2017-01.09.2019] </a></li></h3>
+
+		<p style="text-align:justify"> The Sabaragamuwa University of Sri Lanka (SUSL)  is a public university in Belihuloya, Balangoda, Sri Lanka. 
+			It was founded on 20 November 1991 and consists of Eight faculties including the faculty of Geomatics which is one of the two Institutes
+			 for geomatics related degrees in Sri lanka and is made of well qualified staff and the latest technological resources. In 2018, I was 
+			 promoted as an assistant lecturer in the Department Remote Sensing and GIS, the Faculty of Geomatics after serving as an academic supportive
+			  staff member in the same department for a year. my duties were included,
+			<ol>
+				<li>Conducted supportive lectures and practical classes in Remote Sensing; Digital Image Processing; Satellite Technology; Fundamentals of GIS; 
+					Advanced Remote sensing; LiDAR Systems, Ground Penetration RADAR (GPR) and Applications; Fundamentals of Space Science; and Microwave Remote 
+					Sensing for undergraduates</li>
+				<li>Proctored examinations and led their preparatory workshops, providing class-pertinent materials</li>
+				<li>Worked as a resource person for software and instrument training/use, as well as a student counselor</li>
+			</ol>
+			
+
 		<h3><li>Visiting Instructor, <a href="http://www.sab.ac.lk/fgs/"> Faculty of Graduate studies, Sabaragamuwa University 
 			of Sri Lanka</a></li></h3>
 			<p style="text-align:justify"> Appointed as a Visiting instructor for Masters of Surveying and Geodesy degree program to conduct practical 
@@ -96,18 +97,6 @@
 					</div>
 
 				</p>
-
-			<h3><li>Academic supportitive staff, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka</a></li></h3>
-			<p style="text-align:justify"> I was recruited as a teaching assistant in the Department of Remote Sensing and GIS shortly after two 
-				months of my graduation. My duties were included to,
-				<ol><li>Conduct practical classes for Remote sensing specialization students based on ERDAS imagine, ENVI, NEST and SNAP software 
-					for their Optical and Microwave remote sensing modules</li>
-					<li>Conduct GIS modelling and Applications practical classes for GIS and Cartography specialization students.</li>
-					<li>Land Surveying Field practices to introduce basic surveying methods such as chain surveying, plane table 
-						surveying, compass surveying, tacheometric surveying and levelling for the students who are still involving their core course
-						subjects.</li>
-				</ol></p>
-			
 
 
 
