--- a/work.html
+++ b/work.html
@@ -69,6 +69,7 @@
 				<li>Proctored examinations and led their preparatory workshops, providing class-pertinent materials</li>
 				<li>Worked as a resource person for software and instrument training/use, as well as a student counselor</li>
 			</ol>
+		and the same time, I worked as a visiting intructor for master of surveying science degree
 			
 
 		<h3><li>Visiting Instructor, <a href="http://www.sab.ac.lk/fgs/"> Faculty of Graduate studies, Sabaragamuwa University 
@@ -79,15 +80,17 @@
 		
 		<h3><li>Research assistant,<a href="http://geoinfo.ait.ac.th/"> Geo informatics Centre</a>, Asian institute of Technology, Thailand</li></h3>
 		
-		<p style="text-align:justify"> Each year the Geoinformatics Center invites university students with backgrounds in geospatial-related fields 
-			to participate in internships at AIT to engage with staff in various ongoing projects as well 
+		<p style="text-align:justify"> The Geoinformatics Center (GIC) is a leading remote sensing and GIS organization in Southeast Asia. That is oriented towards 
+			the implementation of projects in connection with GIS and remote sensing. Every year the Geospatial Center invites university students with a background 
+			in geospatial fields to participate in internships at AIT to engage with staff in various ongoing projects as well 
 			as attend training programs conducted by the center which help to foster their background knowledge and offer 
 			experiences in new areas during the internship. <br><br>
-			
-			In 2017, I joined the Geoinformatics Center for a three-month training program as part of my bachelor's degree. In the internship, I was involved in three projects,
-			<ol><li>Road data preparation for network analysis in Bhutan </li>
-				<li> Flood extraction and SAR image analysis for Sri Lankan floods in May 2017 </li>
-				<li>SAR image pre-processing for detecting the flood extent for Vietnam floods in 2017 </li></ol>
+			In 2017, I joined the Geoinformatics Center for a three-month training program as part of my bachelor's degree. In the internship, I was, 
+			<ol>
+				<li>Participated in a project using synthetic aperture radar (SAR) to delineate a flooding event in Sri Lanka</li>
+				<li>Developed a 3D model of the flooding event using data acquired by an unmanned aerial vehicle (UAV)</li>
+				<li>Coordinated workshops at the Geoinformatics Center to inspire and promote the field to students</li>
+			</ol>
 				<a href="http://geoinfo.ait.ac.th/training/internships/#middleofpage", style="text-align: right">link</a>
 				<div class="box alt">
 					<div class="row gtr-50 gtr-uniform">
@@ -100,9 +103,7 @@
 
 
 
-
-
-		</ol>
+	</ol>
 			
 		</div>		
 		</section>
