--- a/work.html
+++ b/work.html
@@ -38,7 +38,7 @@
 
 	<section>
 		<header class="main">
-		<h1 style="text-align:center">WORK EXPERIENCE</h1>
+		<h1 style="text-align:center">WORK EXPERIENCES</h1>
 		<br>
 		</header>
 
